Simplified notification system for data updates to work with future changelog system

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -100,18 +100,8 @@
     <string name="about_category_title">Acerca de</string>
     <string name="notification_channel_description_updates">Actualizaciones de paradas y líneas.</string>
     <string name="notification_channel_name_updates">Actualizaciones</string>
-    <string name="updated_bus_stops_message">"Número de la nueva versión: "</string>
-    <string name="updated_bus_stops_title">Actualizadas paradas de bus</string>
-    <string name="updated_tram_stops_message">"Número de la nueva versión: "</string>
-    <string name="updated_tram_stops_title">Actualizadas paradas de tranvía</string>
-    <string name="updated_bus_lines_message">"Número de la nueva versión: "</string>
-    <string name="updated_bus_lines_title">Actualizadas líneas de bus</string>
-    <string name="updated_tram_lines_message">"Número de la nueva versión: "</string>
-    <string name="updated_tram_lines_title">Actualizadas líneas de tranvía</string>
-    <string name="updated_tram_lines_locations_title">Actualizadas posiciones de líneas de tranvía</string>
-    <string name="updated_tram_lines_locations_message">"Número de la nueva versión: "</string>
-    <string name="updated_bus_lines_locations_message">"Número de la nueva versión: "</string>
-    <string name="updated_bus_lines_locations_title">Actualizadas posiciones de líneas de bus</string>
+    <string name="updated_stops_lines_title">Actualizadas paradas y líneas</string>
+    <string name="updated_stops_lines_message">Revisa el registro de cambios para más detalles</string>
     <string name="play_intro_title">Introducción a la aplicación</string>
     <string name="play_intro_summary">Como si fuese la primera vez</string>
     <string name="slide_favorites_description">Añade paradas a tus favoritos para acceder fácilmente. Renombra, reordena y colorea tus favoritos para mantenerte organizado.</string>
