--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -23,7 +23,7 @@
     <string name="no_reminders">¡Aún no tienes notificaciones!</string>
     <string name="reminders_destination_title">Notificaciones</string>
     <string name="fab_add_favorite">Añadir a favoritos</string>
-    <string name="fab_remove_favorite">Eliminar de favoritos</string>
+    <string name="fab_remove_favorite">Eliminar favorito</string>
     <string name="fab_reminder">Crear notificación</string>
     <string name="fab_shortcut">Crear acceso directo</string>
     <string name="shortcut_pinning_not_supported">Accesos directos no disponibles en tu dispositivo</string>
