--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
 
     <!--Stop details-->
     <string name="no_data_available" translatable="true">No data available</string>
-    <string name="no_data_available_suggestions" translatable="true">Please check your internet connection and try again.\n\nIf the problem persists the city council service that provides this information may be undergoing maintenance. Some stops and lines don\'t receive time updates.</string>
+    <string name="no_data_available_suggestions" translatable="true">Please check your internet connection and try again.\n\nArrival times are provided by a city council service, when this service fails the information is extracted directly from the official Avanza websites. If the problem persists the entire system is probably undergoing maintenance.\n\nSome stops and lines don\'t receive time updates, specially outside of their schedule. </string>
     <string name="no_estimate" translatable="true">No estimate</string>
     <string name="minutes" translatable="true">minutes</string>
     <string name="minute" translatable="true">minute</string>
