Added collapsing toolbar to stop details with extended stop information, minor cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="shortcut_pinning_not_supported" translatable="true">Shortcuts not support in your device</string>
     <string name="refresh_menu_item" translatable="true">Refresh</string>
     <string name="pinned_shortcut_snackbar" translatable="true">Created shortcut!</string>
+    <string name="stop" translatable="true">Stop</string>
 
     <!--Line details-->
     <string name="line" translatable="true">Line</string>
