--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -125,4 +125,5 @@
     <string name="open_source_title">Código abierto</string>
     <string name="pinned_shortcut_snackbar">¡Acceso directo creado!</string>
     <string name="changelog_summary">Lista de cambios en información de paradas y líneas</string>
+    <string name="stop">Parada</string>
 </resources>
