--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -126,4 +126,5 @@
     <string name="pinned_shortcut_snackbar">¡Acceso directo creado!</string>
     <string name="changelog_summary">Lista de cambios en información de paradas y líneas</string>
     <string name="stop">Parada</string>
+    <string name="directions_menu_item">Direcciones</string>
 </resources>
