--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="create_reminder" translatable="true">Create reminder</string>
     <string name="create_button" translatable="true">Create</string>
     <string name="shortcut_pinning_not_supported" translatable="true">Shortcuts not support in your device</string>
+    <string name="directions_menu_item" translatable="true">Directions</string>
     <string name="refresh_menu_item" translatable="true">Refresh</string>
     <string name="pinned_shortcut_snackbar" translatable="true">Created shortcut!</string>
     <string name="stop" translatable="true">Stop</string>
