Added Web Views to app for twitter timelines, line schedules and more. Added line schedules to line details with javascript injection to clean the page from extra content

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -127,4 +127,5 @@
     <string name="changelog_summary">Lista de cambios en información de paradas y líneas</string>
     <string name="stop">Parada</string>
     <string name="directions_menu_item">Direcciones</string>
+    <string name="schedule_menu_item">Horario</string>
 </resources>
