--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -128,4 +128,6 @@
     <string name="stop">Parada</string>
     <string name="directions_menu_item">Direcciones</string>
     <string name="schedule_menu_item">Horario</string>
+    <string name="tram_line_schedule_title">Horario línea de tranvía</string>
+    <string name="bus_line_schedule_title">Horario línea de bus %</string>
 </resources>
